 - Added support for My Inno Setup Extensions installers older than 3.0.6.1
 - Added support for installers using an alternative setup loader magic
 - Added support for using boost_{zlib,bzip2} when statically linking Boost
 - Added support for automatically reading external setup.0 files
 - Implemented parsing of GOG Galaxy architecture constraints
 - Fixed extracting files from slices larger than 2 GiB with 32-bit builds
 - Fixed output path for files with absolute paths (canonicalization now strips all unsafe characters)
 - Fixed output directory being created even when not extracting files
 - Changed header parsing to select the first version without warnings and failing that the first without errors

innoextract 1.7 (2018-06-12)
 - Added support for Inno Setup 5.6.0 installers
 - Added support for new GOG installers with GOG Galaxy file parts
 - Added support for encrypted installers with the --password (-P) and --password-file options
 - Added a --show-password option to print password check information
 - Added a --check-password option to abort if the provided password does not match the stored checksum
 - Added a --info (-i) convenience option to print information about the installer
 - Added a --list-sizes option to print file sizes even with --quiet or --silent
 - Added a --list-checksums option to print file checksums
 - Added a --data-version (-V) option to print the data version and exit
 - Added a --no-extract-unknown (-n) option to abort on unknown Inno Setup data versions
 - Fixed building in paths that contain regex expressions
 - Fixed case-sensitivity in parent directory when creating subdirectories
 - Fixed .bin slice file names used with Inno Setup versions older than 4.1.7
 - Fixed build with newer libc++ versions
 - Made loading of .bin slice files case-insensitive
 - The --test option can now be combined with --extract to abort on file checksum errors
 - Now compiles in C++17 mode if supported

innoextract 1.6 (2016-03-24)